-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 13.0.0
-
None
-
-
c14845181 (master)
Consider the following code (cursor is marked with `|`):
typedef struct S { int i; long l; float f; double d; } S; int main() { S s = {.i = 1|, .l = 2, .f = 3, .d = 4}; return s.i; }
I want to change the line to
S s = {.i = 1}; //, .l = 2, .f = 3, .d = 4};
so I press `}` and immediately the whole code is indented two times (see attached video).
This also happens with `-tcs`, but I think depending on tab settings and previous/next lines the indentation can be much higher.
The indentation is corrected once `;` is pressed but the effect is really annoying and makes you think you did something wrong.
- is duplicated by
-
QTCREATORBUG-30814 Weird automatic indentation while typing
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-30731 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
563754,7 | ClangFormat: Fix indentation in the middle of line | master | qt-creator/qt-creator | Status: MERGED | +2 | -1 |