ClangFormat: Fix indentation in the middle of line

Before, indentation applies in the middle of the line if an electric
 character is typed.
Now it happens only if the character is typed at the line's end or start
 and if new line character was typed. It should reduce jumping while typing.

Fixes: QTCREATORBUG-30731
Change-Id: I018cb4a03af5e6450be2cd423cb29bd384048871
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>